<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/contact_person_name_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/regis_contact_sub_heading"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="25dp"
        android:text="@string/contact_pers_tag"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contact_person_name_box"
        android:layout_width="369dp"
        android:layout_height="38dp"
        android:layout_below="@id/contact_person_name_heading"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_corner_button"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/contact_tel_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_person_name_box"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:text="@string/tel_tag"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/contact_tel_box"
        android:layout_width="370dp"
        android:layout_height="38dp"
        android:layout_below="@id/contact_tel_heading"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/round_corner_button"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/regis_contact_heading"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="123dp"
        android:text="@string/regis_contact_heading"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/regis_contact_heading2"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/regis_contact_heading"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="123dp"
        android:text="@string/regis_contact_heading_2"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/regis_contact_sub_heading"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/regis_contact_heading2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:text="@string/regis_sub_heading_1"
        android:textColor="#E1E1E1" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_corner_button"
        android:text="@string/finish"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/round_corner_button"
        android:text="@string/back_button"
        android:textColor="@color/colorPrimaryDark" />
</RelativeLayout>