<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#42B0FF">

    <TextView
        android:id="@+id/regis_heading3"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="89dp"
        android:text="@string/regis_heading_2"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/regis_sub_heading4"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regis_heading3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="21dp"
        android:text="@string/regis_sub_heading_3"
        android:textColor="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/regis_type_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_corner_button"
            android:text="@string/regis_type_button"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="77dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/regis_try_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_screen_red"
            android:text="@string/try_again"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</RelativeLayout>