<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="73dp"
        android:gravity="center"
        android:text="@string/heading_slide"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/sub_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="25dp"
        android:text="@string/subheading_slide_page_1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="521dp"
        android:layout_marginEnd="30dp"
        android:text="@string/content_page_1"
        android:textColor="#E1E1E1"
        android:textSize="18sp"
        app:autoSizeTextType="uniform" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="397dp"
        android:layout_height="360dp"
        android:layout_alignTop="@id/sub_heading"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="6dp"
        app:srcCompat="@drawable/icon_car_blind" />

</RelativeLayout>